# modern-deeplearning-pipeline

./: .gitignore  AGENT.md  README.md  _dev-cycle.md  mlflow.db  pyproject.toml
dev-cycle/spec/: spec-semantic-module-routing.md
docs/: agent-integration.md  architecture.md  audit-2026-04-01.md  audit-2026-04-02.md  audit-2026-04-03.md  cloud-testing.md  configuration.md  extending.md  gaps-rl-production.md  getting-started.md  impl-moe-expert-parallelism.md  inference-and-serving.md  infra.md  observability.md  plan-adapter-storage-and-export.md  plan-audit-discussion-items.md  plan-audit-remaining.md  plan-distributed-training.md  plan-moe-expert-parallelism.md  plan-native-serving.md  plan-preference-collator.md  plan-rl-generation.md  plan-rl-production-gaps.md  plan-rl-train.md  plan-structural-friction.md  research-rl-train.md  runtime-contracts.md  training.md
mdp/: __init__.py  __main__.py  _liger_patch.py  aliases.yaml  task_taxonomy.py
mdp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mdp/artifacts/: __init__.py  layout.py  loading.py  serving.py
mdp/assembly/: assembly_plan.py  bundles.py  materializer.py  planner.py  specs.py
mdp/callbacks/: __init__.py  base.py  inference.py
mdp/callbacks/interventions/: __init__.py  logit_bias.py  residual_add.py
mdp/cli/: __init__.py  _logging_bootstrap.py  _override.py  _torchrun_entry.py  callback_output.py  estimate.py  export.py  generate.py  inference.py  init.py  list_cmd.py  output.py  rl_train.py  schemas.py  serve.py  train.py
mdp/compute/: __init__.py  _torchrun_entry.py  base.py  cloud.py  estimator.py  job_manager.py  local.py  multi_node.py  remote.py  ssh.py
mdp/data/: __init__.py  base.py  collators.py  csv_dataset.py  dataloader.py  datasets.py  huggingface.py  image_folder.py  loader.py  samplers.py  tokenizer.py  transforms.py
mdp/factory/: assembly_plan.py  bundles.py  factory.py  materializer.py  planner.py  specs.py
mdp/models/: __init__.py  base.py  family_routing.py  forward.py  pretrained.py
mdp/models/adapters/: __init__.py  lora.py  prefix_tuning.py  qlora.py
mdp/models/heads/: __init__.py  base.py  causal_lm.py  classification.py  detection.py  dual_encoder.py  segmentation.py  seq2seq_lm.py  token_classification.py
mdp/monitoring/: __init__.py  baseline.py
mdp/runtime/: context.py  engine.py  launcher.py  payload.py  training.py  worker.py
mdp/serving/: __init__.py  handlers.py  inference.py  model_loader.py  onnx_export.py  server.py  torchserve.py  vllm_server.py
mdp/settings/: components.py  distributed.py  factory.py  loader.py  plan.py  planner.py  resolver.py  run_plan.py  run_plan_builder.py  schema.py
mdp/settings/validation/: __init__.py  business_validator.py  catalog_validator.py  compat_validator.py  component.py
mdp/templates/project/: AGENT.md
mdp/training/: __init__.py  _base.py  _checkpoint.py  _common.py  _features.py  _logging_helpers.py  _mlflow_logging.py  _progress_log.py  _schedulers.py  rl_trainer.py  trainer.py
mdp/training/callbacks/: __init__.py  base.py  checkpoint.py  (+4 more)
mdp/utils/: __init__.py  estimator.py  logging.py  safetensors.py  sanitize.py
plans/: audit-2026-04-03-c7.md  fix-2026-04-04-c9.md  fix-2026-04-07-c17.md  verify-2026-04-07-c17.md
scripts/: cloud_provision.sh  cloud_sync.sh  cloud_teardown.sh  cloud_test.sh  measure_padding_ratio.py  prepare_test_fixtures.py
test_project_tmp/: .gitignore
test_project_tmp/configs/: local.yaml
test_project_tmp/recipes/: example.yaml
tests/: conftest.py  test_phase1_schema_validation.py
tests/contract/: README.md  test_artifact_checkpoint.py  test_artifact_layout_contract.py  test_assembly_plan.py  test_execution_engine.py  test_launch_plan.py  test_materializer.py  test_run_plan.py  test_schema_boundaries.py  test_schema_contract.py
tests/e2e/: conftest.py  datasets.py  gpu_cli_helpers.py  models.py  test_adapter_e2e.py  test_baseline_e2e.py  test_callbacks.py  test_checkpoint_recipe.py  test_cli.py  test_cli_error_contract.py  test_cli_train_contract.py  test_data_integration.py  test_data_validation.py  test_distributed_cpu.py  test_distributed_rl.py  test_early_stopping_e2e.py  test_estimate_e2e.py  test_evaluation.py  test_external_loss.py  test_factory_e2e.py  test_factory_integration.py  test_fields_routing.py  test_forward_adapter.py  test_generate.py  test_gpu_cli_matrix.py  test_gpu_distributed_cli_matrix.py  test_gpu_distributed_rl.py  test_gpu_distributed_sft.py  test_gpu_evaluate.py  test_gpu_inference.py  test_gpu_memory_budget.py  test_gpu_rl.py  test_gpu_sft.py  test_inference.py  test_inference_flow.py  test_inference_hooks_device_map.py  test_language.py  test_materializer_e2e.py  test_materializer_integration.py  test_metadata_preservation.py  (+21 more)
tests/fixtures/: dummy_lengthed.py  memory_budgets.yaml
tests/integration/: test_dataloader_with_sampler.py  test_dispatcher_with_real_peft.py  test_logging_integration.py  test_needs_logits_matrix.py
tests/unit/: test_algorithm_needs_logits.py  test_apply_intervention_tags.py  test_assembly_semantic.py  test_base_model_contract.py  test_base_trainer.py  test_callbacks_file.py  test_ce_helpers.py  test_checkpoint.py  test_checkpoint_manifest.py  test_checkpoint_monitor.py  test_cli_model_source.py  test_cli_setup_logging.py  test_dataloader_no_sampler_regression.py  test_dataset_lengthed.py  test_default_output_callback.py  test_distributed_length_grouped_sampler.py  test_export_cli.py  test_extract_hidden_states_dispatcher.py  test_factory_semantic.py  test_family_routing.py  test_features.py  test_fresh_imports.py  test_fsdp_wrap_policy.py  test_generate_callbacks.py  test_generate_cli.py  test_gpu_fixture_contract.py  test_inference_callback_hierarchy.py  test_interventions.py  test_launch_strategy_contract.py  test_length_grouped_sampler.py  test_liger_patch.py  test_list_callbacks.py  test_load_pretrained_routing.py  test_logging_setup.py  test_memory_history.py  test_mlflow_logging.py  test_monitoring_spec.py  test_oom_memory_summary.py  test_override.py  test_override_integration.py  (+15 more)
(+95 files in other folders)
