[project]
name = "mdp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "mlflow>=2.10",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16",
    "timm>=1.0",
    "albumentations>=1.3",
    "ultralytics>=8.0",
]
language = [
    "transformers>=4.36",
    "tokenizers>=0.15",
    "datasets>=2.16",
    "peft>=0.10,<0.19.0",  # peft 0.19.0: float8_e8m0fnu requires torch>=2.6 (we use 2.5.1)
    "bitsandbytes>=0.41",
    "flash-attn>=2.5",
]
serving = [
    "torchserve>=0.9",
    "onnxruntime>=1.16",
    "accelerate>=0.26",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
all = ["mdp[vision,language,serving]"]

[project.scripts]
mdp = "mdp.__main__:app"

[tool.setuptools.packages.find]
include = ["mdp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "setuptools", "packaging"]

[tool.pytest.ini_options]
markers = [
    "slow: 실모델 로딩이 필요한 통합 테스트 (deselect: -m 'not slow')",
]

[tool.importlinter]
root_packages = ["mdp"]

[[tool.importlinter.contracts]]
name = "Models must not import training or factory"
type = "forbidden"
source_modules = ["mdp.models"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Data must not import training or factory"
type = "forbidden"
source_modules = ["mdp.data"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Serving must not import training"
type = "forbidden"
source_modules = ["mdp.serving"]
forbidden_modules = ["mdp.training"]
