[project]
name = "mdp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "mlflow>=2.10",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16",
    "timm>=1.0",
    "albumentations>=1.3",
    "ultralytics>=8.0",
]
language = [
    "transformers>=4.36",
    "tokenizers>=0.15",
    "datasets>=2.16",
    "peft>=0.10,<0.19.0",  # peft 0.19.0: float8_e8m0fnu requires torch>=2.6 (we use 2.5.1)
    "bitsandbytes>=0.41",
    "flash-attn>=2.5",
]
serving = [
    "torchserve>=0.9",
    "onnxruntime>=1.16",
    "accelerate>=0.26",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
all = ["mdp[vision,language,serving]"]

[project.scripts]
mdp = "mdp.__main__:app"

[tool.setuptools.packages.find]
include = ["mdp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# [tool.uv.extra-build-dependencies] —  uv가 현재 "unknown field"로 무시 (경고 출력).
# 이론상 이 블록은 flash-attn 빌드의 PEP 517 build isolation env에 torch 등을
# 주입해야 하지만 uv 쪽 스키마 미지원으로 실효 없음.
# 실제 해결책은 setup 스크립트(scripts/vast_setup.sh)에서 flash-attn을 별도로
# `uv pip install flash-attn==X.Y.Z --no-build-isolation`으로 설치하는 것.
# 상세: weighted_ntp 저장소의 scripts/vast_setup.sh 및 vault
# infra/vast-ai/access.md "의존성 설치 시 flash-attn 주의" 섹션.
# 향후 uv가 이 필드를 지원하면 주석 해제:
#   [tool.uv.extra-build-dependencies]
#   flash-attn = ["torch", "setuptools", "packaging"]

[tool.pytest.ini_options]
markers = [
    "slow: 실모델 로딩이 필요한 통합 테스트 (deselect: -m 'not slow')",
]

[tool.importlinter]
root_packages = ["mdp"]

[[tool.importlinter.contracts]]
name = "Models must not import training or factory"
type = "forbidden"
source_modules = ["mdp.models"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Data must not import training or factory"
type = "forbidden"
source_modules = ["mdp.data"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Serving must not import training"
type = "forbidden"
source_modules = ["mdp.serving"]
forbidden_modules = ["mdp.training"]
