[project]
name = "mdp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "mlflow>=2.10",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
vision = [
    "torchvision>=0.16",
    "timm>=1.0",
    "albumentations>=1.3",
    "ultralytics>=8.0",
]
language = [
    "transformers>=4.36",
    "tokenizers>=0.15",
    "datasets>=2.16",
    "peft>=0.10,<0.19.0",  # peft>=0.19 requires torch float8 symbols absent from torch 2.5.x
    "bitsandbytes>=0.41",
    "flash-attn>=2.5",
]
serving = [
    "torchserve>=0.9",
    "onnxruntime>=1.16",
    "accelerate>=0.26",
    "fastapi>=0.104",
    "uvicorn>=0.24",
]
# Liger-Kernel: Fused Linear Cross-Entropy 등 memory-efficient kernel을 HF 모델에
# monkey-patch로 주입. CUDA 전용이라 CPU/macOS 환경에서는 미설치 상태로 동작하며
# mdp/_liger_patch.py의 try/except로 graceful skip.
# 상세: spec-algorithm-hidden-states-support §원칙 7.
liger = [
    "liger-kernel>=0.4.0",
]
all = ["mdp[vision,language,serving,liger]"]

[project.scripts]
mdp = "mdp.__main__:app"

[tool.setuptools.packages.find]
include = ["mdp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# [tool.uv.extra-build-dependencies] —  uv가 현재 "unknown field"로 무시 (경고 출력).
# 이론상 이 블록은 flash-attn 빌드의 PEP 517 build isolation env에 torch 등을
# 주입해야 하지만 uv 쪽 스키마 미지원으로 실효 없음.
# 실제 해결책은 setup 스크립트(scripts/vast_setup.sh)에서 flash-attn을 별도로
# `uv pip install flash-attn==X.Y.Z --no-build-isolation`으로 설치하는 것.
# 상세: weighted_ntp 저장소의 scripts/vast_setup.sh 및 vault
# infra/vast-ai/access.md "의존성 설치 시 flash-attn 주의" 섹션.
# 향후 uv가 이 필드를 지원하면 주석 해제:
#   [tool.uv.extra-build-dependencies]
#   flash-attn = ["torch", "setuptools", "packaging"]

[tool.pytest.ini_options]
markers = [
    "slow: 실모델 로딩이 필요한 통합 테스트 (deselect: -m 'not slow')",
    "gpu: 단일 CUDA GPU가 필요한 테스트 (CPU 환경에서는 skip)",
    "distributed: 다중 GPU + NCCL backend가 필요한 테스트 (subprocess+torchrun 패턴)",
    "distributed_cpu: CPU gloo torchrun 기반 분산 테스트 (MDP_RUN_DISTRIBUTED_CPU=1 opt-in)",
    "fixtures: scripts/prepare_test_fixtures.py 산출물(MDP_TEST_FIXTURES)을 사용하는 테스트",
    "memory: GPU memory budget/profile이 필요한 테스트",
]

[tool.importlinter]
root_packages = ["mdp"]

[[tool.importlinter.contracts]]
name = "Models must not import training or factory"
type = "forbidden"
source_modules = ["mdp.models"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Data must not import training or factory"
type = "forbidden"
source_modules = ["mdp.data"]
forbidden_modules = ["mdp.training", "mdp.factory"]

[[tool.importlinter.contracts]]
name = "Serving must not import training"
type = "forbidden"
source_modules = ["mdp.serving"]
forbidden_modules = ["mdp.training"]
